--- a/my-app/src/components/Header/Header.module.css
+++ b/my-app/src/components/Header/Header.module.css
@@ -10,3 +10,15 @@
     width: 40px;
 
 }
+
+.loginBlock {
+    float: right;
+
+}
+
+.loginBlock a {
+    color: white;
+    text-decoration: none;
+    font-size: larger;
+    font-weight: bolder;
+}
