--- a/my-app/src/components/Dialog/Dialogs.module.css
+++ b/my-app/src/components/Dialog/Dialogs.module.css
@@ -3,8 +3,6 @@
     grid-template-columns: 4fr 10fr;
 }
 
-
-
 .dialog {
     padding: 10px
 }
@@ -21,8 +19,7 @@
 .dialog a.active{
     color: #184e7d;
 }
-.messages {
-}
+
 
 .message {
     padding: 5px;
@@ -32,7 +29,7 @@
 }
 
 .input {
-    width: 80%;
+    width: 60%;
     border: #68c5e2 solid 2px;
     border-radius: 10px;
     outline: none;
@@ -46,7 +43,16 @@
     border: 0px;
     margin-left: 2px;
 }
-
-
+.inputError{
+    width: 60%;
+    border: #ab1427 solid 2px;
+    border-radius: 10px;
+    outline: none;
+    padding: 5px;
+}
+.spanError{
+    color: #c23032;
+    font-weight: bold;
+}
 
 
