--- a/my-app/src/components/Profile/MyPost/MyPost.module.css
+++ b/my-app/src/components/Profile/MyPost/MyPost.module.css
@@ -1,5 +1,5 @@
 .input {
-    width: 80%;
+    width: 60%;
     border: #68c5e2 solid 2px;
     border-radius: 10px;
     outline: none;
@@ -12,4 +12,16 @@
     padding: 15px;
     border: 0px;
     margin-left: 2px;
+}
+
+.inputError{
+    width: 60%;
+    border: #c23032 solid 2px;
+    border-radius: 10px;
+    outline: none;
+    padding: 5px;
+}
+.spanError{
+    color: #c23032;
+    font-weight: bold;
 }
