--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,9 +5,10 @@
     grid-template-areas:
             "h h"
              "n c";
-    grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 3fr 9fr;
     grid-gap: 15px;
+    height: 100vh
 
 }
 .app-wrapper-content{
@@ -15,6 +16,7 @@
     padding: 15px;
     margin:0px 20px 20px 0px;
     border: solid 4px #68c5e2;
+
 }
 
 
