--- a/src/components/Profile/MyPost/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/MyPost/ProfileInfo/ProfileInfo.module.css
@@ -6,3 +6,12 @@
 .ava{
     border-radius: 10px;
 }
+
+.contact{
+    padding-left: 20px;
+}
+
+.errortext{
+    color:darkred;
+    font-weight: bold;
+}
