--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,46 @@
-.app-wrapper {
-    margin: 0px 150px 0px 150px;
+/*.app-wrapper {*/
+/*    margin: 0px 150px 0px 150px;*/
+/*    background-color: #a0cbf1;*/
+/*    display: grid;*/
+/*    grid-template-areas:*/
+/*            "h h"*/
+/*             "n c";*/
+/*    grid-template-rows: 100px 1fr;*/
+/*    grid-template-columns: 3fr 9fr;*/
+/*    grid-gap: 15px;*/
+/*    height: 100vh*/
+
+/*}*/
+/*.app-wrapper-content{*/
+/*    grid-area: c;*/
+/*    padding: 15px;*/
+/*    margin:0px 20px 20px 0px;*/
+/*    border: solid 4px #68c5e2;*/
+
+/*}*/
+*{
+    margin: 0;
+    padding: 0;
+    color:#112a3d
+}
+.app_wrapper{
+    width: 1000px;
     background-color: #a0cbf1;
-    display: grid;
-    grid-template-areas:
-            "h h"
-             "n c";
-    grid-template-rows: 100px 1fr;
-    grid-template-columns: 3fr 9fr;
-    grid-gap: 15px;
-    height: 100vh
-
+    margin:0 auto;
 }
-.app-wrapper-content{
-    grid-area: c;
+
+.app_container{
+    display: flex;
+}
+
+.app_content{
+    margin: 20px;
     padding: 15px;
-    margin:0px 20px 20px 0px;
     border: solid 4px #68c5e2;
-
+    width: 60%;
 }
+
+
 
 
 
