--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,15 @@
-/*.app-wrapper {*/
-/*    margin: 0px 150px 0px 150px;*/
-/*    background-color: #a0cbf1;*/
-/*    display: grid;*/
-/*    grid-template-areas:*/
-/*            "h h"*/
-/*             "n c";*/
-/*    grid-template-rows: 100px 1fr;*/
-/*    grid-template-columns: 3fr 9fr;*/
-/*    grid-gap: 15px;*/
-/*    height: 100vh*/
 
-/*}*/
-/*.app-wrapper-content{*/
-/*    grid-area: c;*/
-/*    padding: 15px;*/
-/*    margin:0px 20px 20px 0px;*/
-/*    border: solid 4px #68c5e2;*/
-
-/*}*/
 *{
     margin: 0;
     padding: 0;
-    color:#112a3d
+    color:#112a3d;
+    font-weight: bold;
 }
 .app_wrapper{
     width: 1000px;
     background-color: #a0cbf1;
     margin:0 auto;
+    padding-top: 15px;
 }
 
 .app_container{
@@ -37,7 +20,15 @@
     margin: 20px;
     padding: 15px;
     border: solid 4px #68c5e2;
-    width: 60%;
+    width: 70%;
+}
+
+button{
+    background: #68c5e2;
+    border-radius: 10px;
+    padding: 8px;
+    border: 0px;
+    color: white;
 }
 
 
