--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -10,7 +10,7 @@
 .nav {
     border: solid 4px #68c5e2;
     background-color: #2990ea;
-    width: 20%;
+    width: 220px;
     padding: 15px;
     margin: 20px;
 }
